--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,53 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
+*{
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  list-style: none;
+  font-family: "Roboto", Helvetica, sans-serif;
+}
+
+:root{
+  --primary: #1976D2;
+  --body: #fff;
+  --text-menu: #fff;
+  --text-body: #4b4b4b;
+}
+
+:root .dark-theme{
+  --primary: #0d47a1;
+  --body: #4b4b4b;
+  --text-menu: #fff;
+  --text-body: #fff;
+}
+
+body{
+  background-color: var(--body);
+}
+
+button {
+  background: none;
+  cursor: pointer;
+}
+
+.container {
+  width: 510px;
+  margin: 0 auto;
+}
+
+.container h1 {
+  font-weight: 700;
+  font-size: 25px;
+  margin: 50px 0 10px;
+}
+
+.container p {
+  font-weight: 400;
+  font-size: 16px;
+}
+
+.container h1, .container p {
+  color: var(--text-body);
+}
